# vanguard-core

./: .gitignore  .gitlab-ci.yml  README.md  stack.yaml  vanguard-core.cabal
src/: Prelude.hs
src/Network/Vanguard/: Core.hs
src/Network/Vanguard/Dataplane/: API.hs
test/: ControlTest.hs  Spec.hs  TypesTest.hs
