name:                vanguard-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rlupton20/vanguard-core#readme
license:             GPL-3
license-file:        LICENSE
author:              Richard Lupton
maintainer:          example@example.com
copyright:           2017 Richard Lupton
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.Vanguard.Core
                     , Network.Vanguard.Dataplane.API
  other-modules:       Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , stm
                     , bytestring
                     , network
                     , unix
                     , aeson
                     , containers
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite vanguard-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vanguard-core
                     , protolude >= 0.1.6 && < 0.2
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
                     , aeson
                     , bytestring
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/rlupton20/vanguard-core
